--- a/templates/form_app/form_app.html
+++ b/templates/form_app/form_app.html
@@ -5,10 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="device-width, initialscale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <title>Django Form</title>
 </head>
 
 <body>
+  <div class="container">
+    <form method="POST">
+        {{form.as_p}}
+        {% csrf_token %}
+        <input type="submit" class="btn btn-primary" value="Submit">
+    </form>
+  </div>
 </body>
 
 </html>
