--- a/templates/form_app/index.html
+++ b/templates/form_app/index.html
@@ -5,11 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="device-width, initialscale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <title>HOME</title>
 </head>
 
 <body>
-  <h2>Welcome to the HOME Page</h2>
+  <div class="container">
+    <div class="jumbotron">
+      <h3 class="display-4">Welcome to the Home Page</h3>
+      <p class="lead">Headover to the /form to view the form</p>
+    </div>
+  </div>
 </body>
 
 </html>
